--- a/awc/Cargo.toml
+++ b/awc/Cargo.toml
@@ -57,13 +57,13 @@ open-ssl = { version = "0.10", package = "openssl", optional = true }
 rust-tls = { version = "0.18.0", package = "rustls", optional = true, features = ["dangerous_configuration"] }
 
 [dev-dependencies]
-actix-connect = { version = "2.0.0-alpha.4", features = ["openssl"] }
+actix-connect = { version = "2.0.0", features = ["openssl"] }
 actix-web = { version = "3.0.0-beta.2", features = ["openssl"] }
 actix-http = { version = "2.0.0-beta.3", features = ["openssl"] }
 actix-http-test = { version = "2.0.0-alpha.1", features = ["openssl"] }
 actix-utils = "2.0.0"
 actix-server = "1.0.0"
-actix-tls = { version = "2.0.0-alpha.2", features = ["openssl", "rustls"] }
+actix-tls = { version = "2.0.0", features = ["openssl", "rustls"] }
 brotli2 = "0.3.2"
 flate2 = "1.0.13"
 futures-util = { version = "0.3.5", default-features = false }
