--- a/test-server/Cargo.toml
+++ b/test-server/Cargo.toml
@@ -31,7 +31,7 @@ openssl = ["open-ssl", "awc/openssl"]
 [dependencies]
 actix-service = "1.0.1"
 actix-codec = "0.3.0"
-actix-connect = "2.0.0-alpha.4"
+actix-connect = "2.0.0"
 actix-utils = "2.0.0"
 actix-rt = "1.0.0"
 actix-server = "1.0.0"
