--- a/actix-http/Cargo.toml
+++ b/actix-http/Cargo.toml
@@ -42,11 +42,11 @@ actors = ["actix"]
 [dependencies]
 actix-service = "1.0.5"
 actix-codec = "0.3.0"
-actix-connect = "2.0.0-alpha.4"
+actix-connect = "2.0.0"
 actix-utils = "2.0.0"
 actix-rt = "1.0.0"
 actix-threadpool = "0.3.1"
-actix-tls = { version = "2.0.0-alpha.2", optional = true }
+actix-tls = { version = "2.0.0", optional = true }
 actix = { version = "0.10.0-alpha.1", optional = true }
 
 base64 = "0.12"
@@ -87,9 +87,9 @@ flate2 = { version = "1.0.13", optional = true }
 
 [dev-dependencies]
 actix-server = "1.0.1"
-actix-connect = { version = "2.0.0-alpha.4", features = ["openssl"] }
+actix-connect = { version = "2.0.0", features = ["openssl"] }
 actix-http-test = { version = "2.0.0-alpha.1", features = ["openssl"] }
-actix-tls = { version = "2.0.0-alpha.2", features = ["openssl"] }
+actix-tls = { version = "2.0.0", features = ["openssl"] }
 criterion = "0.3"
 env_logger = "0.7"
 serde_derive = "1.0"
